<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

	<CalendarView
		android:id="@+id/calendarView"
		android:onClick="onClick"
	    android:layout_height="match_parent"
	    android:layout_width="match_parent"
	    android:layout_weight="1"
	    android:selectedWeekBackgroundColor="@android:color/darker_gray"
	    android:weekNumberColor="@android:color/darker_gray"
	    android:weekSeparatorLineColor="@android:color/darker_gray"/>
	<View
		android:layout_width="match_parent"
		android:layout_height="3dp"
		android:layout_marginBottom="@dimen/main_margin_miny"
		android:background="@android:color/darker_gray"/>
	<LinearLayout
		android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_weight="2"
	    android:orientation="vertical">
		<TextView
			android:layout_height="wrap_content"
		    android:layout_width="wrap_content"
		    android:layout_gravity="center_horizontal"
		    android:layout_marginBottom="@dimen/main_margin_miny"
		    android:text="@string/stat_today"/>
		<View
			android:layout_width="match_parent"
			android:layout_marginRight="@dimen/menu_margin"
			android:layout_marginLeft="@dimen/menu_margin"
			android:layout_height="2dp"
			android:layout_marginBottom="@dimen/main_margin_miny"
			android:background="@android:color/darker_gray"/>
		<!-- Layout with statistic -->
		<LinearLayout
			android:layout_weight="1"
			android:layout_height="match_parent"
		    android:layout_width="match_parent"
		    android:orientation="horizontal"
		    android:baselineAligned="false">
			<LinearLayout
				android:layout_weight="1"
				android:layout_height="match_parent"
				android:layout_width="match_parent"
				android:layout_marginRight="@dimen/main_margin_miny"
				android:orientation="vertical">
				<TextView
					android:layout_height="match_parent"
				    android:layout_width="wrap_content"
				    android:layout_weight="1"
				    android:layout_gravity="end"
				    android:text="@string/main_right"/>
				<TextView
					android:layout_height="match_parent"
					android:layout_width="wrap_content"
					android:layout_weight="1"
					android:layout_gravity="end"
					android:text="@string/main_wrong"/>
				<TextView
					android:layout_height="match_parent"
					android:layout_width="wrap_content"
					android:layout_weight="1"
					android:layout_gravity="end"
					android:text="@string/main_rel"/>
			</LinearLayout>
			<LinearLayout
				android:layout_weight="1"
				android:layout_height="match_parent"
				android:layout_width="match_parent"
				android:orientation="vertical">
				<TextView
					android:layout_weight="1"
					android:layout_height="match_parent"
					android:layout_width="wrap_content"
					android:text="111"/>
				<TextView
					android:layout_weight="1"
					android:layout_height="match_parent"
					android:layout_width="wrap_content"
					android:text="222"/>
				<TextView
					android:layout_weight="1"
					android:layout_height="match_parent"
					android:layout_width="wrap_content"
					android:text="333"/>
			</LinearLayout>
		    </LinearLayout>
		<View
			android:layout_width="match_parent"
			android:layout_marginRight="@dimen/header_text_size"
			android:layout_marginLeft="@dimen/header_text_size"
			android:layout_height="2dp"
			android:background="@android:color/darker_gray"/>
		<Button
			android:layout_weight="0"
			android:layout_height="wrap_content"
		    android:layout_width="wrap_content"
		    android:text="@string/stat_details"
		    android:layout_gravity="center_horizontal"/>
	    </LinearLayout>
</LinearLayout>