<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:orientation="vertical"
			  android:layout_width="fill_parent"
			  android:layout_height="fill_parent">
	<View
		android:layout_width="wrap_content"
		android:layout_height="4dp"
		android:background="@android:color/darker_gray"/>
	<LinearLayout
		android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:baselineAligned="false">
		<LinearLayout
			android:layout_weight="3"
			android:layout_height="wrap_content"
		    android:layout_width="match_parent"
		    android:orientation="vertical">
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text=""
				android:singleLine="true"
				android:textSize="@dimen/header_text_size"
				android:layout_marginLeft="10dp"
				android:textStyle="bold"
				android:id="@+id/textViewCh01"/>
			<TextView
				android:id="@+id/tvOperation"
				android:layout_width="fill_parent"
				android:layout_marginLeft="10dp"
				android:layout_height="wrap_content"
				android:text=""
				android:textSize="24dp"/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text=""
				android:textSize="@dimen/header_text_size"
				android:layout_marginLeft="10dp"
				android:textStyle="bold"
				android:id="@+id/textViewNum2"/>
		</LinearLayout>

		<LinearLayout
			android:layout_weight="7"
			android:layout_height="match_parent"
		    android:layout_width="match_parent"
		    android:layout_marginTop="@dimen/main_margin_miny"
		    android:orientation="vertical">
			<TextView
				android:layout_width="wrap_content"
			    android:layout_height="match_parent"
			    android:layout_weight="1"
				android:layout_gravity="end"
				android:layout_marginRight="@dimen/main_margin_miny"
			    android:text="@string/main_right"/>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:layout_gravity="end"
				android:layout_marginRight="@dimen/main_margin_miny"
				android:text="@string/main_wrong"/>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:layout_gravity="end"
				android:layout_marginRight="@dimen/main_margin_miny"
				android:text="@string/main_rel"/>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:layout_gravity="end"
				android:layout_marginRight="@dimen/main_margin_miny"
				android:text="@string/main_time"/>
		</LinearLayout>
		<View
			android:layout_width="2dp"
			android:layout_height="match_parent"
			android:layout_marginRight="4dp"
			android:background="@android:color/darker_gray"/>
		<LinearLayout
			android:layout_weight="7"
			android:layout_height="match_parent"
			android:layout_width="match_parent"
			android:layout_marginTop="@dimen/main_margin_miny"
			android:orientation="vertical">
			<TextView
				android:id="@+id/main_right"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:layout_gravity="start"
				android:text="1"/>
			<TextView
				android:id="@+id/main_wrong"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:layout_gravity="start"
				android:text="2"/>
			<TextView
				android:id="@+id/main_rel"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:layout_gravity="start"
				android:text="3"/>
			<TextView
				android:id="@+id/main_time"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:layout_gravity="start"
				android:text="4"/>

		</LinearLayout>
	</LinearLayout>
	<View
			android:layout_width="fill_parent"
			android:layout_height="3dp"
			android:background="@android:color/darker_gray"/>
	<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textSize="30dp"
			android:textStyle="bold|italic"
			android:singleLine="true"
			android:layout_marginLeft="10dp"
			android:layout_marginTop="10dp"
			android:id="@+id/textViewResult"/>
	<TableLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_marginLeft="15dp"
		android:layout_marginRight="15dp"
		android:layout_marginTop="15dp"
		android:stretchColumns="*">
		<TableRow>
			<Button android:id="@+id/button1"
			        android:tag="1"
			        android:layout_weight="1"
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:onClick="onNumClick"
					android:text="1"/>
			<Button android:id="@+id/button2"
			        android:tag="2"
			        android:layout_weight="1"
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:onClick="onNumClick"
					android:text="2"/>
			<Button android:id="@+id/button3"
			        android:tag="3"
			        android:layout_weight="1"
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:onClick="onNumClick"
					android:text="3"/>
		</TableRow>
		<TableRow>
			<Button android:id="@+id/button4"
			        android:tag="4"
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:onClick="onNumClick"
					android:text="4"/>
			<Button android:id="@+id/button5"
			        android:tag="5"
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:onClick="onNumClick"
					android:text="5"/>
			<Button android:id="@+id/button6"
			        android:tag="6"
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:onClick="onNumClick"
					android:text="6"/>
		</TableRow>
		<TableRow>
			<Button android:id="@+id/button7"
			        android:tag="7"
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:onClick="onNumClick"
					android:text="7"/>
			<Button android:id="@+id/button8"
			        android:tag="8"
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:onClick="onNumClick"
					android:text="8"/>
			<Button android:id="@+id/button9"
			        android:tag="9"
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:onClick="onNumClick"
					android:text="9"/>
		</TableRow>
		<TableRow>
			<Button
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dp"
				android:layout_marginRight="5dp"
				android:onClick="onClick"
				android:text="->"
				android:id="@+id/btnReverse"/>
			<Button android:id="@+id/button0"
			        android:tag="0"
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:onClick="onNumClick"
					android:text="0"/>
			<Button
					android:id="@+id/btnCheck"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginLeft="5dp"
					android:layout_marginRight="5dp"
					android:onClick="onClick"
					android:text="@android:string/ok"/>
		</TableRow>
		<TableRow>
			<Button
				android:onClick="onClick"
				android:layout_marginTop="16dp"
				android:layout_width="wrap_content"
				android:layout_weight="1"
			    android:layout_height="wrap_content"
			    android:text="@string/main_clear"
			    android:id="@+id/btnClear"/>
		</TableRow>
		</TableLayout>
</LinearLayout>

